Refactor rate limiting infrastructure: Rename backend to store and implement InMemoryIssueRateLimitStore
- Renamed IssueRateLimitBackend to IssueRateLimitStore across the codebase for clarity.
- Introduced InMemoryIssueRateLimitStore to handle in-memory rate limiting with thread safety.
- Updated RedisIssueRateLimitBackend to RedisIssueRateLimitStore for consistency.
- Modified related tests and configurations to accommodate the new store structure.
- Ensured that all references to backend functionality are now directed to the store interface.
- Enhanced documentation to reflect changes in the rate limiting architecture.